[bo] nginx config

--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -75,7 +75,7 @@ http {
         }
 
         location /uploads/ {
-            proxy_pass <%= ENV['BO_PUBLIC_API_URL'] %>;
+            proxy_pass <%= ENV['NEXT_PUBLIC_API_URL'] %>;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
