--- a/config/nginx.conf.erb
+++ b/config/nginx.conf.erb
@@ -77,12 +77,14 @@ http {
         location /uploads/ {
             proxy_pass <%= ENV['NEXT_PUBLIC_API_URL'] %>;
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Upgrade 'none';
             proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
+            proxy_set_header Host $proxy_host;
+            proxy_set_header Origin $http_origin;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_pass_request_headers on;
         }
     }
 }
